--- a/environment.yaml
+++ b/environment.yaml
@@ -1,256 +1,23 @@
 name: lcoa-opt-env
 channels:
-  - gurobi
   - defaults
   - conda-forge
 dependencies:
-  - appnope=0.1.3
-  - asttokens=2.2.1
-  - attrs=23.1.0
-  - aws-c-auth=0.7.3
-  - aws-c-cal=0.6.1
-  - aws-c-common=0.9.0
-  - aws-c-compression=0.2.17
-  - aws-c-event-stream=0.3.1
-  - aws-c-http=0.7.11
-  - aws-c-io=0.13.32
-  - aws-c-mqtt=0.9.3
-  - aws-c-s3=0.3.14
-  - aws-c-sdkutils=0.1.12
-  - aws-checksums=0.1.17
-  - aws-crt-cpp=0.21.0
-  - aws-sdk-cpp=1.10.57
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.5
-  - blosc=1.21.4
-  - boost-cpp=1.78.0
-  - bottleneck=1.3.7
-  - branca=0.6.0
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotli-python=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.19.1
-  - c-blosc2=2.10.0
-  - ca-certificates=2023.7.22
-  - cached-property=1.5.2
-  - cached_property=1.5.2
-  - cairo=1.16.0
-  - cartopy=0.22.0
-  - certifi=2023.7.22
-  - cfitsio=4.2.0
-  - cftime=1.6.2
-  - charset-normalizer=3.2.0
-  - click=8.1.6
-  - click-plugins=1.1.1
-  - cligj=0.7.2
-  - cloudpickle=2.2.1
-  - colorama=0.4.6
-  - comm=0.1.4
-  - contourpy=1.1.0
-  - curl=8.2.1
-  - cycler=0.11.0
-  - dask-core=2023.8.0
-  - debugpy=1.6.8
-  - decorator=5.1.1
-  - deprecation=2.1.0
-  - et_xmlfile=1.1.0
-  - executing=1.2.0
-  - expat=2.5.0
-  - fiona=1.9.4
-  - folium=0.14.0
-  - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=3.000
-  - font-ttf-source-code-pro=2.038
-  - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.2
-  - fonts-conda-ecosystem=1
-  - fonts-conda-forge=1
-  - fonttools=4.42.0
-  - freetype=2.12.1
-  - freexl=1.0.6
-  - fsspec=2023.6.0
-  - gdal=3.7.0
-  - geographiclib=1.52
-  - geopandas=0.13.2
-  - geopandas-base=0.13.2
-  - geopy=2.4.0
-  - geos=3.11.2
-  - geotiff=1.7.1
-  - gettext=0.21.1
-  - giflib=5.2.1
-  - glpk=5.0
-  - gmp=6.3.0
-  - gurobi=10.0.2
-  - h5netcdf=1.2.0
-  - h5py=3.9.0
-  - hdf4=4.2.15
-  - hdf5=1.14.1
-  - icu=72.1
-  - idna=3.4
-  - importlib-metadata=6.8.0
-  - importlib_metadata=6.8.0
-  - importlib_resources=6.1.0
-  - ipykernel=6.25.1
-  - ipython=8.14.0
-  - jedi=0.19.0
-  - jinja2=3.1.2
-  - joblib=1.3.2
-  - json-c=0.16
-  - jsonschema=4.19.1
-  - jsonschema-specifications=2023.7.1
-  - jupyter_client=8.3.0
-  - jupyter_core=5.3.1
-  - kealib=1.5.1
-  - kiwisolver=1.4.4
-  - krb5=1.21.2
-  - lcms2=2.15
-  - lerc=4.0.0
-  - libaec=1.0.6
-  - libarchive=3.6.2
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libcurl=8.2.1
-  - libcxx=16.0.6
-  - libdeflate=1.18
-  - libedit=3.1.20191231
-  - libev=4.33
-  - libexpat=2.5.0
-  - libffi=3.4.2
-  - libgdal=3.7.0
-  - libgfortran=5.0.0
-  - libgfortran5=12.3.0
-  - libglib=2.76.4
-  - libiconv=1.17
-  - libjpeg-turbo=2.1.5.1
-  - libkml=1.3.0
-  - liblapack=3.9.0
-  - libnetcdf=4.9.2
-  - libnghttp2=1.52.0
-  - libopenblas=0.3.23
-  - libpng=1.6.39
-  - libpq=15.4
-  - librttopo=1.1.0
-  - libsodium=1.0.18
-  - libspatialindex=1.9.3
-  - libspatialite=5.0.1
-  - libsqlite=3.42.0
-  - libssh2=1.11.0
-  - libtiff=4.5.1
-  - libwebp-base=1.3.1
-  - libxcb=1.15
-  - libxml2=2.11.5
-  - libzip=1.9.2
-  - libzlib=1.2.13
-  - linopy=0.2.4
-  - llvm-openmp=16.0.6
-  - locket=1.0.0
-  - lz4-c=1.9.4
-  - lzo=2.10
-  - mapclassify=2.5.0
-  - markupsafe=2.1.3
-  - matplotlib-base=3.7.2
-  - matplotlib-inline=0.1.6
-  - munch=4.0.0
-  - munkres=1.1.4
-  - nbformat=5.9.2
-  - ncurses=6.4
-  - nest-asyncio=1.5.6
-  - netcdf4=1.6.4
-  - networkx=3.1
-  - nspr=4.35
-  - nss=3.89
-  - numexpr=2.8.4
-  - numpy=1.25.2
-  - openjpeg=2.5.0
-  - openpyxl=3.1.2
-  - openssl=3.1.4
-  - packaging=23.1
-  - pandas=2.0.3
-  - parso=0.8.3
-  - partd=1.4.0
-  - pcre2=10.40
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=10.0.0
-  - pip=23.2.1
-  - pixman=0.40.0
-  - pkgutil-resolve-name=1.3.10
-  - platformdirs=3.10.0
-  - plotly=5.17.0
-  - ply=3.11
-  - pooch=1.7.0
-  - poppler=23.05.0
-  - poppler-data=0.4.12
-  - postgresql=15.4
-  - proj=9.2.1
-  - prompt-toolkit=3.0.39
-  - prompt_toolkit=3.0.39
-  - psutil=5.9.5
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - py-cpuinfo=9.0.0
-  - pygments=2.16.1
-  - pyomo=6.6.1
-  - pyparsing=3.0.9
-  - pyproj=3.6.0
-  - pypsa=0.25.1
-  - pyshp=2.3.1
-  - pysocks=1.7.1
-  - pytables=3.8.0
-  - python=3.11.4
-  - python-dateutil=2.8.2
-  - python-fastjsonschema=2.18.1
-  - python-tzdata=2023.3
-  - python_abi=3.11
-  - pytz=2023.3
-  - pyyaml=6.0
-  - pyzmq=25.1.1
-  - readline=8.2
-  - referencing=0.30.2
-  - requests=2.31.0
-  - rpds-py=0.10.6
-  - rtree=1.0.1
-  - scikit-learn=1.3.0
-  - scipy=1.11.1
-  - setuptools=68.0.0
-  - shapely=2.0.1
-  - six=1.16.0
-  - snappy=1.1.10
-  - sqlite=3.42.0
-  - stack_data=0.6.2
-  - tenacity=8.2.3
-  - threadpoolctl=3.2.0
-  - tiledb=2.13.2
-  - tk=8.6.12
-  - toolz=0.12.0
-  - tornado=6.3.3
-  - tqdm=4.66.1
-  - traitlets=5.9.0
-  - typing-extensions=4.7.1
-  - typing_extensions=4.7.1
-  - tzcode=2023c
-  - tzdata=2023c
-  - urllib3=2.0.4
-  - validators=0.21.2
-  - wcwidth=0.2.6
-  - wheel=0.41.1
-  - xarray=2023.7.0
-  - xerces-c=3.2.4
-  - xlsxwriter=3.1.9
-  - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xyzservices=2023.7.0
-  - xz=5.2.6
-  - yaml=0.2.5
-  - zeromq=4.3.4
-  - zipp=3.16.2
-  - zlib=1.2.13
-  - zlib-ng=2.0.7
-  - zstd=1.5.2
+  - pandas
+  - numpy
+  - pyomo
+  - pypsa
+  - gurobi
+  - ca-certificates
+  - certifi
+  - openssl
+  - geopandas
+  - openpyxl
+  - ipykernel
+  - h5netcdf
+  - geopy
+  - plotly
+  - nbformat
+  - xlsxwriter
+  - glpk
 prefix: /Users/carlopalazzi/mambaforge/envs/lcoa-opt-env
