--- a/environment.yaml
+++ b/environment.yaml
@@ -1,22 +1,256 @@
 name: lcoa-opt-env
 channels:
+  - gurobi
   - defaults
   - conda-forge
 dependencies:
-  - pandas
-  - numpy
-  - pyomo
-  - pypsa
-  - gurobi
-  - ca-certificates
-  - certifi
-  - openssl
-  - geopandas
-  - openpyxl
-  - ipykernel
-  - h5netcdf
-  - geopy
-  - plotly
-  - nbformat
-  - xlsxwriter
-  - glpk
+  - appnope=0.1.3=pyhd8ed1ab_0
+  - asttokens=2.2.1=pyhd8ed1ab_0
+  - attrs=23.1.0=pyh71513ae_1
+  - aws-c-auth=0.7.3=hef4cc69_1
+  - aws-c-cal=0.6.1=h03343b3_1
+  - aws-c-common=0.9.0=h0dc2134_0
+  - aws-c-compression=0.2.17=hc1c6d78_2
+  - aws-c-event-stream=0.3.1=hf265e0f_4
+  - aws-c-http=0.7.11=h4b92c67_4
+  - aws-c-io=0.13.32=h9d499ee_0
+  - aws-c-mqtt=0.9.3=hd869499_1
+  - aws-c-s3=0.3.14=hbbd0165_1
+  - aws-c-sdkutils=0.1.12=hc1c6d78_1
+  - aws-checksums=0.1.17=hc1c6d78_1
+  - aws-crt-cpp=0.21.0=hecd4c9a_5
+  - aws-sdk-cpp=1.10.57=h3ff9d30_19
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+  - blosc=1.21.4=heccf04b_0
+  - boost-cpp=1.78.0=hf5ba120_3
+  - bottleneck=1.3.7=py311hd5badaa_0
+  - branca=0.6.0=pyhd8ed1ab_0
+  - brotli=1.0.9=hb7f2c08_9
+  - brotli-bin=1.0.9=hb7f2c08_9
+  - brotli-python=1.0.9=py311h814d153_9
+  - bzip2=1.0.8=h0d85af4_4
+  - c-ares=1.19.1=h0dc2134_0
+  - c-blosc2=2.10.0=h0dcb076_0
+  - ca-certificates=2023.7.22=h8857fd0_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.16.0=h09dd18c_1016
+  - cartopy=0.22.0=py311hab14417_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
+  - cfitsio=4.2.0=hd56cc12_0
+  - cftime=1.6.2=py311hd5badaa_1
+  - charset-normalizer=3.2.0=pyhd8ed1ab_0
+  - click=8.1.6=unix_pyh707e725_0
+  - click-plugins=1.1.1=py_0
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - cloudpickle=2.2.1=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.1.4=pyhd8ed1ab_0
+  - contourpy=1.1.0=py311h5fe6e05_0
+  - curl=8.2.1=h5f667d7_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dask-core=2023.8.0=pyhd8ed1ab_0
+  - debugpy=1.6.8=py311hdf8f085_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - deprecation=2.1.0=pyh9f0ad1d_0
+  - et_xmlfile=1.1.0=pyhd8ed1ab_0
+  - executing=1.2.0=pyhd8ed1ab_0
+  - expat=2.5.0=hf0c8a7f_1
+  - fiona=1.9.4=py311h4c3e48b_0
+  - folium=0.14.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.2=h5bb23bf_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.42.0=py311h2725bcf_0
+  - freetype=2.12.1=h3f81eb7_1
+  - freexl=1.0.6=hb7f2c08_1
+  - fsspec=2023.6.0=pyh1a96a4e_0
+  - gdal=3.7.0=py311hfbd0d3d_3
+  - geographiclib=1.52=pyhd8ed1ab_0
+  - geopandas=0.13.2=pyhd8ed1ab_1
+  - geopandas-base=0.13.2=pyha770c72_1
+  - geopy=2.4.0=pyhd8ed1ab_0
+  - geos=3.11.2=hf0c8a7f_0
+  - geotiff=1.7.1=h5cf5d3c_11
+  - gettext=0.21.1=h8a4c099_0
+  - giflib=5.2.1=hb7f2c08_3
+  - glpk=5.0=h3cb5acd_0
+  - gmp=6.3.0=h93d8f39_0
+  - gurobi=10.0.2=py311_0
+  - h5netcdf=1.2.0=pyhd8ed1ab_0
+  - h5py=3.9.0=nompi_py311hc915cd5_101
+  - hdf4=4.2.15=h9804679_6
+  - hdf5=1.14.1=nompi_hedada53_100
+  - icu=72.1=h7336db1_0
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib-metadata=6.8.0=pyha770c72_0
+  - importlib_metadata=6.8.0=hd8ed1ab_0
+  - importlib_resources=6.1.0=pyhd8ed1ab_0
+  - ipykernel=6.25.1=pyh5fb750a_0
+  - ipython=8.14.0=pyhd1c38e8_0
+  - jedi=0.19.0=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - json-c=0.16=h01d06f9_0
+  - jsonschema=4.19.1=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+  - jupyter_client=8.3.0=pyhd8ed1ab_0
+  - jupyter_core=5.3.1=py311h6eed73b_0
+  - kealib=1.5.1=h7014c1b_4
+  - kiwisolver=1.4.4=py311hd2070f0_1
+  - krb5=1.21.2=hb884880_0
+  - lcms2=2.15=h2dcdeff_1
+  - lerc=4.0.0=hb486fe8_0
+  - libaec=1.0.6=hf0c8a7f_1
+  - libarchive=3.6.2=h0b5dc4a_1
+  - libblas=3.9.0=17_osx64_openblas
+  - libbrotlicommon=1.0.9=hb7f2c08_9
+  - libbrotlidec=1.0.9=hb7f2c08_9
+  - libbrotlienc=1.0.9=hb7f2c08_9
+  - libcblas=3.9.0=17_osx64_openblas
+  - libcurl=8.2.1=h5f667d7_0
+  - libcxx=16.0.6=hd57cbcb_0
+  - libdeflate=1.18=hac1461d_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libev=4.33=haf1e3a3_1
+  - libexpat=2.5.0=hf0c8a7f_1
+  - libffi=3.4.2=h0d85af4_5
+  - libgdal=3.7.0=h1aad74f_3
+  - libgfortran=5.0.0=12_3_0_h97931a8_1
+  - libgfortran5=12.3.0=hbd3c1fe_1
+  - libglib=2.76.4=hc62aa5d_0
+  - libiconv=1.17=hac89ed1_0
+  - libjpeg-turbo=2.1.5.1=hb7f2c08_0
+  - libkml=1.3.0=haeb80ef_1015
+  - liblapack=3.9.0=17_osx64_openblas
+  - libnetcdf=4.9.2=nompi_hb79a6a3_109
+  - libnghttp2=1.52.0=he2ab024_0
+  - libopenblas=0.3.23=openmp_h429af6e_0
+  - libpng=1.6.39=ha978bb4_0
+  - libpq=15.4=h3df487d_0
+  - librttopo=1.1.0=h5c328d2_13
+  - libsodium=1.0.18=hbcb3906_1
+  - libspatialindex=1.9.3=he49afe7_4
+  - libspatialite=5.0.1=h54d511b_27
+  - libsqlite=3.42.0=h58db7d2_0
+  - libssh2=1.11.0=hd019ec5_0
+  - libtiff=4.5.1=hf955e92_0
+  - libwebp-base=1.3.1=h0dc2134_0
+  - libxcb=1.15=hb7f2c08_0
+  - libxml2=2.11.5=hd95e348_0
+  - libzip=1.9.2=h6db710c_1
+  - libzlib=1.2.13=h8a1eda9_5
+  - linopy=0.2.4=pyhd8ed1ab_0
+  - llvm-openmp=16.0.6=hff08bdf_0
+  - locket=1.0.0=pyhd8ed1ab_0
+  - lz4-c=1.9.4=hf0c8a7f_0
+  - lzo=2.10=haf1e3a3_1000
+  - mapclassify=2.5.0=pyhd8ed1ab_1
+  - markupsafe=2.1.3=py311h2725bcf_0
+  - matplotlib-base=3.7.2=py311haff9b01_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - munch=4.0.0=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
+  - ncurses=6.4=hf0c8a7f_0
+  - nest-asyncio=1.5.6=pyhd8ed1ab_0
+  - netcdf4=1.6.4=nompi_py311ha27cd03_101
+  - networkx=3.1=pyhd8ed1ab_0
+  - nspr=4.35=hea0b92c_0
+  - nss=3.89=h78b00b3_0
+  - numexpr=2.8.4=py311hab14417_1
+  - numpy=1.25.2=py311hc44ba51_0
+  - openjpeg=2.5.0=h13ac156_2
+  - openpyxl=3.1.2=py311h2725bcf_0
+  - openssl=3.1.4=hd75f5a5_0
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.3=py311hab14417_1
+  - parso=0.8.3=pyhd8ed1ab_0
+  - partd=1.4.0=pyhd8ed1ab_0
+  - pcre2=10.40=h1c4e4bc_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=10.0.0=py311h7cb0e2d_0
+  - pip=23.2.1=pyhd8ed1ab_0
+  - pixman=0.40.0=hbcb3906_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - platformdirs=3.10.0=pyhd8ed1ab_0
+  - plotly=5.17.0=pyhd8ed1ab_0
+  - ply=3.11=py_1
+  - pooch=1.7.0=pyha770c72_3
+  - poppler=23.05.0=he041c3a_1
+  - poppler-data=0.4.12=hd8ed1ab_0
+  - postgresql=15.4=hc940a54_0
+  - proj=9.2.1=hc8d59c9_0
+  - prompt-toolkit=3.0.39=pyha770c72_0
+  - prompt_toolkit=3.0.39=hd8ed1ab_0
+  - psutil=5.9.5=py311h5547dcb_0
+  - pthread-stubs=0.4=hc929b4f_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - py-cpuinfo=9.0.0=pyhd8ed1ab_0
+  - pygments=2.16.1=pyhd8ed1ab_0
+  - pyomo=6.6.1=py311hdf8f085_0
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyproj=3.6.0=py311h854a015_1
+  - pypsa=0.25.1=pyhd8ed1ab_0
+  - pyshp=2.3.1=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
+  - pytables=3.8.0=py311hfa5fc9a_2
+  - python=3.11.4=h30d4d87_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.18.1=pyhd8ed1ab_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
+  - python_abi=3.11=3_cp311
+  - pytz=2023.3=pyhd8ed1ab_0
+  - pyyaml=6.0=py311h5547dcb_5
+  - pyzmq=25.1.1=py311h5dacc12_0
+  - readline=8.2=h9e318b2_1
+  - referencing=0.30.2=pyhd8ed1ab_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - rpds-py=0.10.6=py311h5e0f0e4_0
+  - rtree=1.0.1=py311hbc1f44b_2
+  - scikit-learn=1.3.0=py311h83feae1_0
+  - scipy=1.11.1=py311h16c3c4d_0
+  - setuptools=68.0.0=pyhd8ed1ab_0
+  - shapely=2.0.1=py311heb7bb94_1
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.10=h225ccf5_0
+  - sqlite=3.42.0=h2b0dec6_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tenacity=8.2.3=pyhd8ed1ab_0
+  - threadpoolctl=3.2.0=pyha21a80b_0
+  - tiledb=2.13.2=h8b9cbf0_0
+  - tk=8.6.12=h5dbffcc_0
+  - toolz=0.12.0=pyhd8ed1ab_0
+  - tornado=6.3.3=py311h2725bcf_0
+  - tqdm=4.66.1=pyhd8ed1ab_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - tzcode=2023c=hb7f2c08_0
+  - tzdata=2023c=h71feb2d_0
+  - urllib3=2.0.4=pyhd8ed1ab_0
+  - validators=0.21.2=pyhd8ed1ab_0
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - wheel=0.41.1=pyhd8ed1ab_0
+  - xarray=2023.7.0=pyhd8ed1ab_0
+  - xerces-c=3.2.4=h90c7484_2
+  - xlsxwriter=3.1.9=pyhd8ed1ab_0
+  - xorg-libxau=1.0.11=h0dc2134_0
+  - xorg-libxdmcp=1.1.3=h35c211d_0
+  - xyzservices=2023.7.0=pyhd8ed1ab_0
+  - xz=5.2.6=h775f41a_0
+  - yaml=0.2.5=h0d85af4_2
+  - zeromq=4.3.4=he49afe7_1
+  - zipp=3.16.2=pyhd8ed1ab_0
+  - zlib=1.2.13=h8a1eda9_5
+  - zlib-ng=2.0.7=hb7f2c08_0
+  - zstd=1.5.2=h829000d_7
+prefix: /Users/carlopalazzi/mambaforge/envs/lcoa-opt-env
